--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
   <groupId>io.qala.java-beginner-course</groupId>
   <artifactId>java-beginner-course</artifactId>
   <version>1-SNAPSHOT</version>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>8</source>
+          <target>8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
   <packaging>jar</packaging>
 
 </project>
