--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
       <version>1.1.7</version>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
